Add authentication methods and user roles to test accounts

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                                     <th>Tezos Address</th>
                                     <th>Base Address</th>
                                     <th>Status</th>
+                                    <th>Authentication</th>
                                     <th>Balance</th>
                                     <th>Reputation</th>
                                     <th>Verification</th>
@@ -131,6 +132,7 @@
                                     <td><span class="text-monospace small">tz1XTbJrMGHan4vEYmE7xpCKExBi3oDYYmPI3</span></td>
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning">Moderator</span></td>
                                     <td>684.61 <i class="bi bi-arrow-right"></i> 55.88</td>
                                     <td>40.4 <i class="bi bi-arrow-right"></i> 40.4</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
@@ -143,6 +145,7 @@
                                     <td><span class="text-monospace small">tz2HYEVENZnJxtzXChvZxSwQaSVnJDSN</span></td>
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-info">Google Auth</span></td>
                                     <td>6.06 <i class="bi bi-arrow-right"></i> 0.98</td>
                                     <td>0 <i class="bi bi-arrow-right"></i> 0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
@@ -155,6 +158,7 @@
                                     <td><span class="text-monospace small">tz2GYLLxLJQqyaYmE1qVkLppEKfKRK4q52gf</span></td>
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-primary">X (Twitter)</span></td>
                                     <td>0 <i class="bi bi-arrow-right"></i> 2.39</td>
                                     <td>0 <i class="bi bi-arrow-right"></i> 0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
@@ -167,6 +171,7 @@
                                     <td><span class="text-monospace small">tz1YX9mD4pdrz4vYpyE9dMMkJJaWFX6qa9Qs</span></td>
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-success">Sentinel Wallet</span></td>
                                     <td>194.9 <i class="bi bi-arrow-right"></i> 3080.69</td>
                                     <td>0 <i class="bi bi-arrow-right"></i> 0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
