Update balance display to show internal and external values separately

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
                                     <th>Base Address</th>
                                     <th>Status</th>
                                     <th>Authentication</th>
-                                    <th>Balance</th>
+                                    <th>Internal Balance</th>
+                                    <th>External Balance</th>
                                     <th>Reputation</th>
                                     <th>Verification</th>
                                     <th>Actions</th>
@@ -133,8 +134,9 @@
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning">Moderator</span></td>
-                                    <td>684.61 <i class="bi bi-arrow-right"></i> 55.88</td>
-                                    <td>40.4 <i class="bi bi-arrow-right"></i> 40.4</td>
+                                    <td>55.88</td>
+                                    <td>684.61</td>
+                                    <td>40.4</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="kanley">Details</button>
@@ -146,8 +148,9 @@
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-info">Google Auth</span></td>
-                                    <td>6.06 <i class="bi bi-arrow-right"></i> 0.98</td>
-                                    <td>0 <i class="bi bi-arrow-right"></i> 0</td>
+                                    <td>0.98</td>
+                                    <td>6.06</td>
+                                    <td>0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="herner">Details</button>
@@ -159,8 +162,9 @@
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-primary">X (Twitter)</span></td>
-                                    <td>0 <i class="bi bi-arrow-right"></i> 2.39</td>
-                                    <td>0 <i class="bi bi-arrow-right"></i> 0</td>
+                                    <td>2.39</td>
+                                    <td>0</td>
+                                    <td>0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="twitter">Details</button>
@@ -172,8 +176,9 @@
                                     <td><span class="text-monospace small">To be assigned</span></td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td><span class="badge bg-success">Sentinel Wallet</span></td>
-                                    <td>194.9 <i class="bi bi-arrow-right"></i> 3080.69</td>
-                                    <td>0 <i class="bi bi-arrow-right"></i> 0</td>
+                                    <td>3080.69</td>
+                                    <td>194.9</td>
+                                    <td>0</td>
                                     <td><span class="badge bg-secondary">Not Started</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="keith">Details</button>
