--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            <div class="alert alert-info mt-3">
+                                <strong>Migration Code Repository:</strong> <a href="https://github.com/Decentralized-Pictures/dcp-migrations" target="_blank">github.com/Decentralized-Pictures/dcp-migrations</a>
+                            </div>
                         </div>
                     </div>
                 </div>
