Update character profiles with detailed roles, activities and motivations

--- a/character-detail-herner.html
+++ b/character-detail-herner.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card-body">
                         <div class="text-center mb-4">
-                            <i class="bi bi-person-lock" style="font-size: 6rem; color: #858796;"></i>
+                            <img src="herner.webp" alt="Herner Werzog" class="img-fluid rounded-circle" style="width: 180px; height: 180px; object-fit: cover;">
                             <div class="mt-3">
                                 <span class="badge bg-secondary me-2">Second Prod User</span>
                                 <span class="badge bg-danger">Verification Failed</span>
