--- a/character-detail-keith.html
+++ b/character-detail-keith.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card-body">
                         <div class="text-center mb-4">
-                            <i class="bi bi-gear-wide-connected" style="font-size: 6rem; color: #f6c23e;"></i>
+                            <img src="keith.webp" alt="Keith Fellini" class="img-fluid rounded-circle" style="width: 180px; height: 180px; object-fit: cover;">
                             <div class="mt-3">
                                 <span class="badge bg-warning me-2">Baker Testing</span>
                                 <span class="badge bg-dark">Prod/Stage</span>
