--- a/characters.html
+++ b/characters.html
@@ -77,7 +77,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            Hands-on entrepreneur who jumped on the platform early. Always on the move!
+                            <strong>The Visionary Founder:</strong> A filmmaker & early submitter who regularly submits film proposals using FILMCredits and participates in Creative Queries. With high internal wallet balance and reputation, likely a founding participant who uses DCP as a platform to launch projects quickly.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -113,7 +113,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            "Prod moderator is a bad idea." A skeptical tester with strong opinions.
+                            <strong>The Contrarian Reviewer:</strong> A community reviewer who leaves detailed critiques on projects. Rarely submits work, focuses on evaluating others' films. Has 2FA enabled but failed Plaid verification. His zero reputation suggests he's often out of sync with winning picks—rating unconventionally.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -149,7 +149,7 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            Social media integration testing account. No email, minimal security.
+                            <strong>The Social Proxy:</strong> An outreach bot/social integration tester that posts automated Creative Queries for feedback on social media campaigns. Low wallet balances and zero reputation indicate this isn't a human user but a test bot or outreach persona for bridging DCP with external platforms.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
@@ -185,11 +185,69 @@
                         <hr>
                         <p class="text-muted mb-0">
                             <i class="bi bi-quote me-2"></i>
-                            The validator/baker with high-value assets. Meticulous and security-minded.
+                            <strong>The Blockchain Baker:</strong> A technical validator who runs a T4L3NT Net validator node, helping secure the DCP blockchain. Massive external wallet and mixed 2FA/ID status suggest someone deep in the ecosystem, with high technical commitment but low social engagement.
                         </p>
                     </div>
                     <div class="card-footer bg-light">
                         <a href="character-detail-keith.html" class="btn btn-warning w-100 text-dark">View Profile</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Character Roles & Motivations -->
+        <div class="row mt-4 mb-5">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header bg-light">
+                        <h4 class="mb-0">Character Roles & Motivations</h4>
+                    </div>
+                    <div class="card-body">
+                        <p class="mb-4">These characters represent different user archetypes within the DCP ecosystem, each with unique motivations and platform activities:</p>
+                        
+                        <div class="table-responsive">
+                            <table class="table table-bordered">
+                                <thead class="table-light">
+                                    <tr>
+                                        <th>Character</th>
+                                        <th>Primary Role</th>
+                                        <th>Key Activities</th>
+                                        <th>Motivation</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><strong>Kanley Stubrick</strong></td>
+                                        <td>Filmmaker</td>
+                                        <td>Submits pitches, uses Creative Queries</td>
+                                        <td>Launch his projects, gain traction</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Herner Werzog</strong></td>
+                                        <td>Reviewer / Critic</td>
+                                        <td>Reviews projects, stakes tokens, flags issues</td>
+                                        <td>Influence outcomes, surface outliers</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>TwitterProd</strong></td>
+                                        <td>Social Bridge / Bot</td>
+                                        <td>Posts queries, files bug reports, tests integrations</td>
+                                        <td>Connect DCP to outside audiences</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Keith Fellini</strong></td>
+                                        <td>Technical Validator</td>
+                                        <td>Runs node, validates blocks, supports protocol</td>
+                                        <td>Keep platform decentralized and secure</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        
+                        <div class="alert alert-info mt-4">
+                            <i class="bi bi-info-circle me-2"></i>
+                            <strong>Migration Importance:</strong> Each character represents a specific user type with unique needs and behaviors. The migration must accommodate all these user archetypes to ensure a successful transition to Base L3.
+                        </div>
                     </div>
                 </div>
             </div>
