--- a/character-detail-twitter.html
+++ b/character-detail-twitter.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="card-body">
                         <div class="text-center mb-4">
-                            <i class="bi bi-twitter" style="font-size: 6rem; color: #36b9cc;"></i>
+                            <img src="twitterprod.webp" alt="TwitterProd" class="img-fluid rounded-circle" style="width: 180px; height: 180px; object-fit: cover;">
                             <div class="mt-3">
                                 <span class="badge bg-info me-2">Social Testing</span>
                                 <span class="badge bg-secondary">Phone Only</span>
