--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                         <a class="nav-link" href="setup-guide.html">Setup Guide</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="characters.html">Characters</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#test-cases">Test Cases</a>
                     </li>
                     <li class="nav-item">
@@ -79,6 +82,22 @@
                                 </div>
                                 <div class="col-auto">
                                     <i class="bi bi-file-earmark-text fa-2x text-gray-300"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-md-8 mb-4">
+                    <div class="card border-left-primary shadow h-100 py-2">
+                        <div class="card-body">
+                            <div class="row no-gutters align-items-center">
+                                <div class="col mr-2">
+                                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                        Test Character Profiles</div>
+                                    <a href="characters.html" class="h5 mb-0 font-weight-bold text-gray-800 d-block">View Characters</a>
+                                </div>
+                                <div class="col-auto">
+                                    <i class="bi bi-people fa-2x text-gray-300"></i>
                                 </div>
                             </div>
                         </div>
