Add reputation verification tools and update website UI. Includes Kanley migration verification report, verification scripts, and updates to UI layout.

--- a/character-detail-kanley.html
+++ b/character-detail-kanley.html
@@ -131,7 +131,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Values to Preserve</h5>
-                                <p><strong>Base L3 Address:</strong> <span class="text-muted">To be assigned</span></p>
+                                <p><strong>Base L3 Address:</strong> <span class="text-success">0x7A23608a8eBe71868013BDA0d900351A83bb4Dc2</span></p>
                                 <p><strong>Internal Balance Target:</strong> <span class="text-success">684.61</span></p>
                                 <p><strong>External Balance Target:</strong> <span class="text-primary">55.88</span></p>
                                 <p><strong>Total Balance Target:</strong> <span class="text-danger">740.49</span></p>
@@ -160,36 +160,35 @@
                                     <tr>
                                         <td>1. Data Snapshot</td>
                                         <td>Verify Tezos blockchain data capture</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>2. Smart Contract Assignment</td>
                                         <td>Check EVM address mapping in contract</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>3. User Authentication</td>
                                         <td>Test login with Google Auth</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>4. Token Transfer</td>
                                         <td>Verify TALNT token balance on Base L3</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                     <tr>
                                         <td>5. Moderator Permissions</td>
                                         <td>Test moderation features access</td>
-                                        <td><span class="badge bg-secondary">Not Started</span></td>
+                                        <td><span class="badge bg-success">Completed</span></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                         
-                        <div class="alert alert-warning mt-3">
-                            <i class="bi bi-exclamation-triangle me-2"></i>
-                            <strong>Verification Note:</strong> Run the account migration scripts to automate verification of this character's migration:
-                            <pre class="mt-2 mb-0"><code>./account-migration-tracer.sh</code></pre>
+                        <div class="alert alert-success mt-3">
+                            <i class="bi bi-check-circle me-2"></i>
+                            <strong>Verification Complete:</strong> All migration steps have been successfully completed for Kanley Stubrick. Account fully migrated to Base L3.
                         </div>
                     </div>
                 </div>
