--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
                                 <tr>
                                     <td>Kanley Stubrick</td>
                                     <td><span class="text-monospace small">tz1XTbJrMGHan4vEYmE7xpCKExBi3oDYYmPI3</span></td>
-                                    <td><span class="text-monospace small">To be assigned</span></td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="text-monospace small">0x7A23608a8eBe71868013BDA0d900351A83bb4Dc2</span></td>
+                                    <td><span class="badge bg-success">Completed</span></td>
                                     <td><span class="badge bg-info">Google Auth</span> <span class="badge bg-warning">Moderator</span></td>
                                     <td>55.88</td>
                                     <td>684.61</td>
                                     <td>40.4</td>
-                                    <td><span class="badge bg-secondary">Not Started</span></td>
+                                    <td><span class="badge bg-success">Verified</span></td>
                                     <td>
                                         <button class="btn btn-sm btn-outline-primary account-details-btn" data-account="kanley">Details</button>
                                     </td>
@@ -262,35 +262,35 @@
                                         <div class="fw-bold">Tezos Snapshot</div>
                                         Take snapshot of account balances and reputation on Tezos
                                     </div>
-                                    <span class="badge bg-secondary rounded-pill">Not Started</span>
+                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Base Smart Contract Assignment</div>
                                         Assign cutover address in Base L3 smart contract
                                     </div>
-                                    <span class="badge bg-secondary rounded-pill">Not Started</span>
+                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">User Authentication</div>
                                         Verify user can sign in and activate their account
                                     </div>
-                                    <span class="badge bg-secondary rounded-pill">Not Started</span>
+                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Token Transfer</div>
                                         Verify tokens are sent to wallet after user interaction
                                     </div>
-                                    <span class="badge bg-secondary rounded-pill">Not Started</span>
+                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
                                         <div class="fw-bold">Data Verification</div>
                                         Verify balances and reputation are preserved
                                     </div>
-                                    <span class="badge bg-secondary rounded-pill">Not Started</span>
+                                    <span class="badge bg-primary rounded-pill">Complete (1/4)</span>
                                 </li>
                             </ol>
                         </div>
@@ -361,13 +361,13 @@
                             <div class="mb-4">
                                 <h6>Overall Account Migration Progress</h6>
                                 <div class="progress" style="height: 20px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
                                 </div>
                             </div>
                             <div class="mb-4">
                                 <h6>Kanley Stubrick</h6>
                                 <div class="progress" style="height: 15px;">
-                                    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
                                 </div>
                             </div>
                             <div class="mb-4">
